--- a/portal/website/templates/application.html
+++ b/portal/website/templates/application.html
@@ -50,6 +50,10 @@
                 <p class="fs-5">
                     If you are a researcher affiliated with a US Academic Institution,
                     the capacity of the <a class="link-dark" href="https://osg-htc.org/services/open_science_pool">OSPool</a> is available for you to harness, just sign up!
+                    <div class="alert alert-primary">
+                        Welcome <b><a href="https://nairrpilot.org/opportunities/allocations">NAIRR pilot projects</a></b>! The OSG Consortium is excited to support your research via the
+                        OSPool and PATh facility resources. Fill out the form below to get started.
+                    </div>
                 </p>
                 <form id="consultation-form" name="consultation-form" method="post" action="">
                     <div>
@@ -68,6 +72,7 @@
                         <label for="how-heard" class="form-label">How did you hear about the OSPool?</label>
                         <select id="how-heard" name="how-heard" class="form-select" onchange="showOptionalInfoInput(this)">
                             <option value="">Please select</option>
+                            <option value="NAIRR pilot resource request">NAIRR pilot resource request</option>
                             <option value="Online search">Online search</option>
                             <option value="Peers or colleagues at my institution">Peers or colleagues at my institution</option>
                             <option value="Collaborator within a project">Collaborator within a project</option>
